@@ -93,5 +93,9 @@ model TestBrent
     y^2+a^2=10;
   end NegativeNominal;
     
-  annotation (uses(Modelica(version="3.2.1")));
+  model Bounds
+    Real x(start=1.2, min=1, max=2);
+  equation
+    sin(x)^2=0.5;
+  end Bounds;
 end TestBrent;
